# python-charmedupgradeclient

./: readme.md  setup.cfg  setup.py
charmed_upgrade/osc/: plugin.py
charmed_upgrade/v1/: client.py  commands.py
