[metadata]
name = python-charmedupgradeclient
summary = Python client library for Charmed Openstack Upgrade API
description_file = readme.md
author = Canonical
author_email = openstack@canonical.com
home_page =  https://docs.openstack.org/python-watcherclient/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    charmed_upgrade

[entry_points]
openstack.cli.extension =
    charmed_upgrade = charmed_upgrade.osc.plugin

openstack.charmed_upgrade.v1 =
    charm_upgrade_prep = charmed_upgrade.v1.commands:UpgradePrep